Future planned changes:
- 0xD editing files (hemingway and insert modes)
- 0xE Dirty Rat game
  - status bar
  - actual levels for the game (3x)
  - game logic (collecting floppies, exiting to next level)
  - dirt!

Current version changes:

Released versions:
0x0C [RELEASED]:
  - virtual screens (paging)
  - simple screen saver (for CRT monitors and fun)
  - codebase rearanged, better comments/headers
  - progress on Dirty Rat game
    - better rat animation handling
    - colors
    - collecting floppies
    - function for drawing walls from stack data
  - bootloader: check for floppy drive number
  - lot of bugfixes
  - more colors
  - introducion of DSKY input interface: VERB/NOUN
  - removal of old commands system (one letter)
0x0B:
- file system:
  - fixed files positions and size (8K)
  - added change log as file3
  - fixed CHS values
  - full printer support
    - printer initialization
    - print one char
    - print a string (Welcome message)
    - print current buffer
  - Dirty Rat game
    - better broom random movement
      system for drawing levels (walls, elements)
  - changed kernel version naming to hexadecimal numbers - it's no longer alpha!
0x0A:
  - progress on Dirty Rat game
    - drawing one test level
    - player movement
    - rando broom movement
  - bugfixes, checks, stability testing
  - show/hide cursor (shell/game)
  - updated logo (removed 16bit part)
alpha9 [RELEASED]:
  - start of a Dirty Rat mini game
  - initial printing support (theoretical)
  - list and select files to read/write
  - updated sample files with ASCII Art Gallery and Notepad (for future edits)
  - removed toolbar
  - reduced and rearanged tileset to work with any EGA/VGA (no 1px gaps)
  - working no-gap tiles on all text modes!
alpha8:
  - new mascot
  - lot of bugfixes
  - updated status [s] reporting (date/battery/mouse)
  - refactored toolbar backend with secondary menus
  - code golf and optimizations
  - cpuid added with fallback for 386
  - updated logo