@@ -7,6 +7,8 @@ Future planned changes:
   - dirt!
 
 Current version changes:
+0x0D:
+  - screen saver fixed, implemented
 
 Released versions:
 0x0C [RELEASED]:
